# data-pipeline-vbplnew

./: README.md  a.py  a1.py  a2.py  a3.py  env.py  main.py  output_document_list.py  pyproject.toml  step_call_colab.py  step_clean_document_pending.py  step_crawl_document_detail.py  step_crawl_document_list.py  step_crawl_document_total.py  step_extract_document_content.py  step_extract_document_info.py  step_extract_document_markdown.py  step_load_document_detail.py  step_load_document_list.py  step_load_document_total.py  step_rag_chunking.py  step_rag_context.py  step_rag_embedding.py  step_rag_summary.py  step_setup_workflow.py  temp1.py  temp14.py  temp2.py  temp3.py  temp922.py  temp_step_rag_chunk.py  workflow_config.py
.github/workflows/: data_pipeline.yml  skip14.yml  step_setup_workflow.yml
crawler/: middlewares.py  settings.py
crawler/spiders/: document_detail_spider.py  document_list_spider.py  document_total_spider.py
docs/: run.md  workflow.json  workflow.md
rag/: embedding.py  llm.py  vectorstore.py
rag/prompt/: chunking_prompt.py  contextualizer_prompt.py  summary_prompt.py
utils/: config_by_path.py  document_helper.py  google_drive.py  hash_helper.py  jsonl_helper.py  request_helper.py  workflow_helper.py
